Open source clang warning: bitwise operation between different enumeration types [-Wenum-enum-conversion] <https://webkit.org/b/217805> <rdar://problem/70250742>

Reviewed by Darin Adler.

* wtf/text/StringImpl.h:
(WTF::StringImpl::StringImpl::s_hashZeroValue): Add.
(WTF::StringImpl::StringImpl):
- Use s_hashZeroValue as first value in bitwise-or expression
  so that enums are converted automatically to unsigned values.


Canonical link: https://commits.webkit.org/230568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268606 268f45cc-cd09-0410-ab3c-d52691b4dbfc